--- a/text.html
+++ b/text.html
@@ -18,7 +18,84 @@ nutritional needs.
 <!-- buttons -->
 Start eating well
  Learn more ↓
+<!-- 02 -->
+<!-- section how -->
+HOW IT WORKS
+Your daily dose of health in 3 simple steps
 
+<!-- step 1 -->
+01
+<!-- heading -->
+Tell us what you like (and what not)
+<!-- decription -->
+Never again waste time thinking about what to eat!
+Omnifood AI will create a 100% personalized weekly meal plan just for
+you. It makes sure you get all the nutrients
+and vitamins you need, no matter what diet you follow!
+
+
+<!-- step 2 -->
+
+
+02
+<!-- heading -->
+Approve your weekly meal plan
+<!-- decription -->
+Once per week, approve the meal plan generated for you by Omnifood AI.
+You can change ingredients, swap entire meals, or
+even add your own recipes.
+
+<!-- step 3 -->
+
+03
+<!-- heading -->
+Receive meals at convenient time
+<!-- decription -->
+Best chefs in town will cook your selected meal every day,
+and we will deliver it to your door whenever works best for
+you. You can change delivery schedule and address daily!
+
+
+
+<!-- MEALS SECTION -->
+
+MEALS
+Omnifood AI chooses from 5,000+ recipes
+<!-- HEADING -->
+Works with any diet:
+<!-- 1 -->
+VEGETARIAN
+
+Japanese Gyozas
+
+650 calories
+NutriScore ® 74
+4.9 rating (537)
+
+
+<!-- 2 -->
+
+VEGAN
+PALEO
+
+Avocado Salad
+
+400 calories
+NutriScore ® 92
+4.8 rating (441)
+
+<!-- 3 -->
+Vegetarian
+Vegan
+Pescatarian
+Gluten-free
+Lactose-free
+Keto
+Paleo
+Low FODMAP
+Kid-friendly
+
+See all recipes &rarr;
 
  <!-- /* font-size: 10px; */
 
