--- a/text.html
+++ b/text.html
@@ -95,6 +95,73 @@ Paleo
 Low FODMAP
 Kid-friendly
 
+
+
+<!-- TESTIMONIALS SECTION -->
+
+TESTIMONIALS
+Once you try it, you can't go back
+
+<!-- 01 -->
+Inexpensive, healthy and great-tasting meals,
+without even having to order manually! It feels truly magical.
+— Dave Bryson
+
+<!-- 02 -->
+The AI algorithm is crazy good,
+it chooses the right meals for me every time.
+It's amazing not to worry about food anymore!
+— Ben Hadley
+
+<!-- 03 -->
+Omnifood is a life saver! I just started a company,
+so there's no time for cooking.
+I couldn't live without my daily meals now!
+— Steve Miller
+
+<!-- 04 -->
+I got Omnifood for the whole family,
+and it frees up so much time! Plus,
+everything is organic and vegan and without plastic.
+— Hannah Smith
+
+
+<!-- PRICE SECTION -->
+
+
+PRICING
+Eating well without breaking the bank
+
+<!-- 01 STARTER -->
+STARTER
+
+$399
+
+per month. That's just $13 per meal!
+
+1 meal per day
+Order from 11am to 9pm
+Delivery is free
+
+Start eating well
+
+
+
+<!-- 02 COMPLETE -->
+COMPLETE
+
+$649
+
+per month. That's just $11 per meal!
+
+2 meals per day
+Order 24/7
+Delivery is free
+Get access to latest recipes
+Start eating well
+
+Prices include all applicable taxes. You can cancel at any time. Both plans include the following:
+
 See all recipes &rarr;
 
  <!-- /* font-size: 10px; */
